Fix odd flair vertical align levels

--- a/_flair.scss
+++ b/_flair.scss
@@ -250,6 +250,7 @@
 	display: inline-block;
 	padding-left: 18px;
 	height: 18px;
+	vertical-align: middle;
 }
 .flair-challenge + .userattrs:after {
 	content: " ";
@@ -258,6 +259,7 @@
 	display: inline-block;
 	padding-left: 24px;
 	height: 22px;
+	vertical-align: middle;
 }
 .flair-one + .userattrs:after {background-position: 0px -2px;}
 .flair-two + .userattrs:after {background-position: -26px -2px;}
